fixing music player on mobile

--- a/app/public/wp-content/themes/Markus Portfolio/src/scss/components/header-nav.scss
+++ b/app/public/wp-content/themes/Markus Portfolio/src/scss/components/header-nav.scss
@@ -3,15 +3,18 @@
     position: fixed;
     top: 0;
     left: 0;
-    right: 0;
     padding: 5px;
     color: $off-white;
     z-index: 3;
     max-width: 1550px;
-    width: 100%;
     transition: opacity .4s linear, width .3s, background .3s .2s;
     margin: 0 auto;
     background: rgba(0, 0, 0, 0.2);
+
+    @include breakpoint(mobile) {
+        width: 100%;
+        right: 0;
+    } 
 
     &:after {
         content: '';
