--- a/app/public/wp-content/themes/Markus Portfolio/src/scss/components/music-player.scss
+++ b/app/public/wp-content/themes/Markus Portfolio/src/scss/components/music-player.scss
@@ -111,8 +111,12 @@ progress {
   margin-bottom: 10px;
   width: 100%;
   border: none;
-  height: 6px;
+  height: 12px;
   cursor: pointer;
+
+  @include breakpoint(desktop) {
+    height: 6px;
+  }
 
   &::-webkit-progress-bar  {
     background: rgba(255,255,255,.1);
